# getmarket

./: .gitignore  API_DOCUMENTATION.md  CLAUDE.md  Cargo.toml  DATABASE_SCHEMA_DOCS.md  README.md  database_schema.sql  issue_1.txt  issue_2.json  issue_rest_api.md  issue_web_app.md  market_data.db-shm  market_data.db-wal  test_schema_validation.sql
project/: OVERVIEW.md
src/: database.rs  lib.rs  main.rs  nse.rs
src/api/: mod.rs
src/api/middleware/: mod.rs
src/api/models/: mod.rs  pagination.rs  requests.rs  responses.rs
src/api/routes/: companies.rs  health.rs  market.rs  mod.rs  prices.rs  search.rs
